[project]
name = "metsudepmanager"
version = "0.1.0"
description = "Gestor de dependencias ético, seguro, accesible y listo para producción para Python"
authors = [
    {name = "Raul Carrillo Garrido aka metsuke",email = "metsuke@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
